# computational-policy-atlas

./: .gitignore  404.html  CONTRIBUTING.md  IWM-LOOP-PROMPT.md  POLYPHONY-LOOP-PROMPT.md  PROGRESS.md  README.md  index.html  mkdocs.yml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: gap-or-extension.md  model-adapter.md  synergy-hypothesis.md
.github/workflows/: deploy.yml
bibliography/: index.html
comparative/: index.html
comparative/abm-vs-cge/: index.html
comparative/continuous-vs-discrete/: index.html
comparative/deterministic-vs-stochastic/: index.html
comparative/equilibrium-vs-disequilibrium/: index.html
comparative/iam-vs-energy/: index.html
comparative/lp-vs-milp/: index.html
comparative/optimization-vs-simulation/: index.html
comparative/recursive-vs-perfect-foresight/: index.html
comparative/system-dynamics-vs-abm/: index.html
comparative/top-down-vs-bottom-up/: index.html
decisions/: index.html
decisions/0001-positioning-paradigm-plural-not-world-model/: index.html
decisions/0002-repo-layout-and-trunk-based-flow/: index.html
docs/: bibliography.md  index.md
foundations/: index.html
graph/: index.html
model-families/: index.html
paradigms/: index.html
patterns/: index.html
polyphony/: README.md  index.html  pyproject.toml
polyphony/00-inventory/: index.html
polyphony/01-blueprint/: index.html
polyphony/PROGRESS/: index.html
polyphony/leaderboard/: index.html
polyphony/polyphony/: __init__.py
polyphony/related-work/: index.html
search/: search_index.json
(+176 files in other folders)
